--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -35,7 +35,7 @@
           </p>
         </div>
         <div class="buttonContainer">
-          <a href="../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 120px;"></button></a>
+          <a href="../../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 120px;"></button></a>
           <a href="./project.html"><button class="button-28 aboutme montserrat-light" role="button" style="width: 120px;"></button></a>
           <a href="./contact.html"><button class="button-28 contact montserrat-light" role="button" style="width: 120px;"></button></a>
         </div>
