--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -138,7 +138,7 @@
       </a>
 
       <div class="buttonContainer" style="margin-top: 10px;">
-        <a href="../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 100px;"></button></a>
+        <a href="../../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 100px;"></button></a>
         <a href="./about.html"><button class="button-28 aboutme montserrat-light" role="button" style="width: 100px;"></button></a>
         <a href="./project.html"><button class="button-28 contact montserrat-light" role="button" style="width: 100px;"></button></a>
       </div>
