--- a/public/partials/project.html
+++ b/public/partials/project.html
@@ -110,7 +110,7 @@
           </div>
           
           <div class="buttonContainer">
-            <a href="../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 100px;"></button></a>
+            <a href="../../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 100px;"></button></a>
             <a href="./about.html"><button class="button-28 aboutme montserrat-light" role="button" style="width: 100px;"></button></a>
             <a href="./contact.html"><button class="button-28 contact montserrat-light" role="button" style="width: 100px;"></button></a>
           </div>
