--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -130,10 +130,10 @@
       <a class="btn" href="https://github.com/GavrielAldrich">
         <i class="fab fa-github"></i>
       </a>
-      <a class="btn" href="">
+      <a class="btn" href="https://www.instagram.com/gavrielaldrch/?next=%2F">
         <i class="fab fa-instagram"></i>
       </a>
-      <a class="btn" href="#">
+      <a class="btn" href="https://www.linkedin.com/in/gavriel-aldrich-willem-saerang-a762ba266/">
         <i class="fab fa-linkedin"></i>
       </a>
 
