--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -30,14 +30,14 @@
       <section class="about">
         <div class="text-container">
           <p class="alice-regular" style="font-size: 40px; margin-bottom: 10px; text-align: center;">About Me</p>
-          <p class="about-text montserrat-light" style="margin-bottom: 25px; opacity: 0; text-align: center;">
+          <p class="about-text montserrat-light" style="margin-bottom: 25px; opacity: 0; text-align: center; margin: 0px 25px 20px 25px;">
             A dedicated and hardworking individual with a profound passion for programming.<br>Currently immersed in the fascinating world of web development,<br>I am on a journey to become a full-stack Developer and consistently enhancing my skills and tackle new challenges.
           </p>
         </div>
         <div class="buttonContainer">
-          <a href="../../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 120px;"></button></a>
-          <a href="./project.html"><button class="button-28 aboutme montserrat-light" role="button" style="width: 120px;"></button></a>
-          <a href="./contact.html"><button class="button-28 contact montserrat-light" role="button" style="width: 120px;"></button></a>
+          <a href="../../index.html"><button class="button-28 home montserrat-light" role="button" style="width: 100px;"></button></a>
+          <a href="./project.html"><button class="button-28 aboutme montserrat-light" role="button" style="width: 100px;"></button></a>
+          <a href="./contact.html"><button class="button-28 contact montserrat-light" role="button" style="width: 100px;"></button></a>
         </div>
       </section>
   </main>
