--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -156,7 +156,7 @@
         // Text animations for buttons
         gsap.to('.home', {duration: 0.5, delay: 1, text: "Home", fontSize: "15px", textDecoration: "underline"});
         gsap.to('.aboutme', {duration: 0.5, delay: 1.5, text: "About", fontSize: "15px", textDecoration: "underline"});
-        gsap.to('.contact', {duration: 0.5, delay: 2, text: "Contact", fontSize: "15px", textDecoration: "underline"});
+        gsap.to('.contact', {duration: 0.5, delay: 2, text: "Project", fontSize: "15px", textDecoration: "underline"});
     </script>
     
     <!-- MY SCRIPT -->
