--- a/public/partials/project.html
+++ b/public/partials/project.html
@@ -81,7 +81,7 @@
                 <a href="https://github.com/GavrielAldrich/BeritaIND"><img src="../../src/img/BeritaInd.png" class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                   <a href="https://github.com/GavrielAldrich/BeritaIND" style="color: white;"><h5>BeritaInd</h5></a>
-                  <p>An online magazine that receives API data from CNN using Axios.</p>
+                  <p>An online magazine that GET API from CNN using Axios and display the data.</p>
                 </div>
               </div>
               <div class="carousel-item">
